--- a/deployment.yaml
+++ b/deployment.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: hello-python
-        image: hello-python:latest
+        image: ./hello-python:latest
         imagePullPolicy: Never
         ports:
         - containerPort: 5000
