--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,8 +1,9 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: CronWorkflow
 metadata:
   name: hello-python
 spec:
+  schedule: "*/5 * * * *"
   replicas: 3
   revisionHistoryLimit: 3
   selector:
