--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,9 +1,8 @@
 apiVersion: apps/v1
-kind: CronWorkflow
+kind: Deployment
 metadata:
   name: hello-python
 spec:
-  schedule: "*/5 * * * *"
   replicas: 3
   revisionHistoryLimit: 3
   selector:
